# Shibuya-waf-light-version

./: .gitignore  README.md  SHIBUYA 300b1a79c58980eb8fb1dfd361bb1f9b.md  cleanup.sh  shibuya_stress_test.py  status_report.md  verify.sh  verify_wiring.sh  vulnerable_target.py  waf mvp.txt  waf_verify.py
waf-killer/: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  analyze_size.sh  check_output.txt  cleanup.sh  rules_dump.json  setup  start  test_dashboard.sh  test_phase1.sh  test_phase2.sh  test_phase3.sh  test_waf.sh  validate_analytics.sh  validate_rules.sh  validate_vulns.sh  validate_waf.sh  verify.sh  verify_auth.sh  verify_replay.sh  waf_verify.py
waf-killer/.cargo/: config.toml
waf-killer/.github/workflows/: deploy-production.yml  production-checks.yml  validate-policy.yml
waf-killer/api/: Cargo.toml  build.rs
waf-killer/api/src/: grpc.rs  http.rs  lib.rs  team.rs  tenant.rs  websocket.rs
waf-killer/api/src/http/: auth.rs
waf-killer/api/src/middleware/: rbac.rs  tenant_ctx.rs
waf-killer/api/src/routes/: activity.rs  audit.rs  ebpf.rs  mod.rs  team.rs  tenants.rs
waf-killer/architecture/: DPAL-SPECIFICATION.md  FAST-PATH-DESIGN.md  FUTURE-HARDWARE.md
waf-killer/benchmarks/: compare_coraza.sh  detection_test.sh  gotestwaf_runner.sh  load_test.js  memory_profile.sh  report_generator.py  run_all.sh  rust_microbench.rs
waf-killer/certs/: cert.pem  key.pem
waf-killer/cli/: Cargo.toml  build.rs
waf-killer/cli/src/: main.rs
waf-killer/cli/src/client/: grpc.rs
waf-killer/cli/src/commands/: api.rs  completions.rs  deploy.rs  graphql.rs  init.rs  logs.rs  mod.rs  patch.rs  policy.rs  reload.rs  replay.rs  rules.rs  scan.rs  shadow.rs  start.rs  stats.rs  status.rs  stop.rs  team.rs  tenant.rs  test.rs
waf-killer/cli/src/config/: mod.rs  templates.rs  validator.rs
waf-killer/cli/src/ui/: mod.rs  prompts.rs  spinner.rs  table.rs
waf-killer/config/: waf.yaml  waf_test.yaml
waf-killer/config/rules/: crs-setup.conf
waf-killer/core/: Cargo.toml  build.rs  build_checklist.md  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  check_output.txt  fixes_applied.md  test_log.txt  test_log_2.txt  test_output.txt
waf-killer/core/benches/: parser_bench.rs  rule_engine_bench.rs  rule_matching.rs
waf-killer/core/examples/: openapi-simple.yaml
waf-killer/core/ml/training/: retrain.py
waf-killer/core/proto/: threat_intel.proto
waf-killer/core/src/: admin_api.rs  graceful_shutdown.rs  health.rs  lib.rs  main.rs  management_service.rs  metrics.rs  persistence.rs  proxy_optimized.rs  quick_setup.rs  state.rs  telemetry.rs  traffic_stats.rs
waf-killer/core/src/api/: api_protection.rs  auth.rs  bot_detection.rs  config.rs  mod.rs  shadow_api.rs  tenants.rs  virtual_patches.rs
waf-killer/core/src/api_protection/: jwt.rs  mod.rs  oauth.rs  registry.rs  state.rs
waf-killer/core/src/audit/: export.rs  history.rs  logger.rs  mod.rs
waf-killer/core/tests/: api_protection_test.rs  config_persistence_tests.rs  git_policy_sync_integration.rs  git_sync_tests.rs  integration_test.rs  ml_classifier_tests.rs  ml_features_tests.rs  ml_integration_test.rs  multipart_security_tests.rs  parser_tests.rs  rule_execution_tests.rs  rule_parsing_tests.rs  test_config.yaml  threat_intel_test.rs  transform_tests.rs
waf-killer/dashboard/: Dockerfile  README.md  avvio.txt  package.json  vite.config.ts
waf-killer/dashboard/src/: app.css  app.html  hooks.server.ts
waf-killer/deploy/argocd/: application.yaml
waf-killer/deploy/edge/: fly.toml
waf-killer/docker/: Dockerfile  docker-compose-qa.yml  docker-compose.yml  prometheus.yml
waf-killer/docker/secrets/: abuseipdb.key  alienvault.key
waf-killer/docs/: api_protection.md  episode-01-reverse-proxy.txt  episode-02-parser.txt  episode-03-rule-engine.txt  episode-04-ml-layer1.txt  episode-05-ml-classification.txt  episode-06-ml-detection.txt  episode-07-cli.txt  episode-08-policy-as-code.txt  episode-09-dashboard.txt  episode-10-threat-intelligence.txt  episode-11-api-protection.txt  episode-12-scanner-virtual-patch.txt  episode-14-cloud-native.txt  episode-15-performance.txt  episode-16-enterprise-auth.txt  episode-19-ebpf.txt  platform-support.md
waf-killer/docs/configuration/: git-sync.md  persistence.md
waf-killer/docs/testing/: git-sync-manual-test.md
waf-killer/ebpf/: Makefile
waf-killer/ebpf/src/: tc_filter.bpf.c  xdp_filter.bpf.c
waf-killer/examples/: plugin_auth.rs
waf-killer/examples/graphql/: schema.graphql
waf-killer/examples/openapi/: petstore.yaml
waf-killer/examples/policies/: basic.yaml
waf-killer/examples/saml/: okta-config.xml
waf-killer/launcher/: Cargo.toml
waf-killer/launcher/src/: main.rs
waf-killer/migrations/: 001_reconstructed.sql  002_traffic_capture.sql  003_api_schemas.sql  004_vulnerabilities.sql  005_multi_tenancy.sql  006_rbac.sql  007_audit.sql  008_auth.sql  009_mfa.sql  010_sessions.sql
waf-killer/ml/training/: generate_attack_dataset.py  generate_dataset.py  prepare_dataset.py  requirements.txt  retrain.py  train.py  train_anomaly.py  train_classifier.py
waf-killer/monitoring/: README.md  grafana-dashboard.json
waf-killer/proto/: waf_api.proto
waf-killer/rules/openapi/: api-v1.yaml
waf-killer/schemas/: policy.schema.json
waf-killer/scripts/: chaos_test.sh  deploy.sh  install.sh  qa_multi_tenancy.py  run_gotestwaf.sh  setup-ebpf.sh
waf-killer/stress-test/: attack_30.sh  mega_stress_test.sh  run_test.sh  vulnerable_app.js
waf-killer/test-site/: vuln-app.js
waf-killer/test_backend/: server.js
waf-killer/testdata/payloads/: multipart_attack.txt  sqli_encoded.txt  xss_obfuscated.txt
waf-killer/tests/: api_protection_e2e.sh  mock_backend.py
waf-killer/threat-intel/: go.mod
waf-killer/threat-intel/config/: config.yaml
waf-killer/tools/: attack_test.py  benchmark.sh  debug_parser.rs  flamegraph.sh  live_simulation.py  live_simulation.sh  live_simulation_final.sh  stress_test.py
waf-killer/wit/: plugin-api.wit
(+245 files in other folders)
