[package]
name = "waf-killer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
waf-killer-core = { path = "../core" }

# Dashboard API
axum = { version = "0.7", features = ["ws", "macros", "form"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
futures = "0.3"
tonic = "0.12"
prost = "0.13"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1.7"
pingora = { git = "https://github.com/cloudflare/pingora", features = ["lb"] }

[build-dependencies]
tonic-build = "0.12"


