[package]
name = "waf-killer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# UI / UX
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"
crossterm = "0.27"
ratatui = "0.26"
comfy-table = "7.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] } # Helper for downloads
futures = "0.3"

# Core Library (for Policy structs)
waf-killer-core = { path = "../core" }

[build-dependencies]
tonic-build = "0.12"
